--- a/GUI/BayeScEnv/gui.ui
+++ b/GUI/BayeScEnv/gui.ui
@@ -42,8 +42,8 @@
     <rect>
      <x>660</x>
      <y>370</y>
-     <width>168</width>
-     <height>25</height>
+     <width>178</width>
+     <height>29</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -88,13 +88,13 @@
    <property name="title">
     <string>Options</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>144</width>
-      <height>136</height>
+      <width>145</width>
+      <height>141</height>
      </rect>
     </property>
     <property name="font">
@@ -207,8 +207,6 @@ the allele frequencies?</string>
      </item>
     </layout>
    </widget>
-   <zorder></zorder>
-   <zorder></zorder>
   </widget>
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
@@ -229,13 +227,13 @@ the allele frequencies?</string>
    <property name="title">
     <string>Parameters of the MCMC chain</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>29</y>
       <width>226</width>
-      <height>178</height>
+      <height>184</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -549,7 +547,7 @@ for computation</string>
    <property name="title">
     <string>Parameters for dominant data</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -955,13 +953,13 @@ as a fraction of maximum band intensity</string>
    <property name="title">
     <string>General parameters</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>13</x>
       <y>30</y>
-      <width>221</width>
-      <height>141</height>
+      <width>224</width>
+      <height>146</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_7">
@@ -1190,7 +1188,7 @@ locus-specific model</string>
           <double>0.050000000000000</double>
          </property>
          <property name="value">
-          <double>0.500000000000000</double>
+          <double>0.100000000000000</double>
          </property>
         </widget>
        </item>
@@ -1235,7 +1233,7 @@ locus-specific model</string>
           <double>0.050000000000000</double>
          </property>
          <property name="value">
-          <double>0.100000000000000</double>
+          <double>0.500000000000000</double>
          </property>
         </widget>
        </item>
@@ -1263,13 +1261,13 @@ locus-specific model</string>
    <property name="title">
     <string>Input / Output</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>30</y>
       <width>609</width>
-      <height>130</height>
+      <height>138</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -1613,18 +1611,11 @@ will contain the output files</string>
     </layout>
    </widget>
   </widget>
+  <zorder>groupBox</zorder>
   <zorder>groupBox_5</zorder>
-  <zorder>layoutWidget</zorder>
-  <zorder>layoutWidget</zorder>
-  <zorder>layoutWidget</zorder>
-  <zorder>layoutWidget</zorder>
-  <zorder>layoutWidget</zorder>
   <zorder>layoutWidget</zorder>
   <zorder>displayBox</zorder>
   <zorder>groupBox_2</zorder>
-  <zorder>outPilotCheckBox</zorder>
-  <zorder>outPilotCheckBox</zorder>
-  <zorder>frame</zorder>
   <zorder>groupBox_3</zorder>
   <zorder>groupBox_4</zorder>
  </widget>
